@@ -1,12 +1,19 @@
 ##############################################################################
 #
-# ActiveDirectoryMultiPlugin   Shim to use the LDAPUserFolder with the
-#                   PluggableAuthenticationService w/ AD
+# Copyright (c) Jens Vagelpohl and Contributors. All Rights Reserved.
+#
+# This software is subject to the provisions of the Zope Public License,
+# Version 2.1 (ZPL).  A copy of the ZPL should accompany this distribution.
+# THIS SOFTWARE IS PROVIDED "AS IS" AND ANY AND ALL EXPRESS OR IMPLIED
+# WARRANTIES ARE DISCLAIMED, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+# WARRANTIES OF TITLE, MERCHANTABILITY, AGAINST INFRINGEMENT, AND FITNESS
+# FOR A PARTICULAR PURPOSE.
 #
 ##############################################################################
+""" ActiveDirectoryUserFolder shim module
 
-__doc__     = """ ActiveDirectoryUserFolder shim module """
-__version__ = '$Revision$'[11:-2]
+$Id$
+"""
 
 # General Python imports
 import logging
