@@ -1,14 +1,19 @@
 ##############################################################################
 #
-# __init__.py	Initialization code for the LDAP Multi Plugins
+# Copyright (c) Jens Vagelpohl and Contributors. All Rights Reserved.
 #
-# This software is governed by a license. See
-# LICENSE.txt for the terms of this license.
+# This software is subject to the provisions of the Zope Public License,
+# Version 2.1 (ZPL).  A copy of the ZPL should accompany this distribution.
+# THIS SOFTWARE IS PROVIDED "AS IS" AND ANY AND ALL EXPRESS OR IMPLIED
+# WARRANTIES ARE DISCLAIMED, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+# WARRANTIES OF TITLE, MERCHANTABILITY, AGAINST INFRINGEMENT, AND FITNESS
+# FOR A PARTICULAR PURPOSE.
 #
 ##############################################################################
+""" LDAPMultiPlugin product initialization
 
-__doc__     = """ LDAPUserFolder shims initialization module """
-__version__ = '$Revision$'[11:-2]
+$Id$
+"""
 
 from AccessControl.Permissions import add_user_folders
 from Products.PluggableAuthService.PluggableAuthService import \
