@@ -1,0 +1,21 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    i18n_domain="ldapmultiplugins"
+    >
+
+  <adapter factory=".exportimport.LDAPMultiPluginXMLAdapter"/>
+
+  <genericsetup:importStep
+      name="ldapmultiplugins"
+      title="LDAPMultiPlugins"
+      description="Import LDAPMultiPlugins settings"
+      handler="Products.LDAPMultiPlugins.exportimport.importLDAPMultiPlugins"/>
+
+  <genericsetup:exportStep
+      name="ldapmultiplugins"
+      title="LDAPMultiPlugins"
+      description="Export LDAPMultiPlugins settings"
+      handler="Products.LDAPMultiPlugins.exportimport.exportLDAPMultiPlugins"/>
+
+</configure>
